Add bluestreak JMS exporter variants

--- a/src/data/workflows/h1/3d.yml
+++ b/src/data/workflows/h1/3d.yml
@@ -56,7 +56,7 @@ Halo Physics Importer:
 Bluestreak:
   page: bluestreak
   authors:
-    - TheGhost
+    - TheGhost, various later contributors
   workflows:
     - from:
         - Gmax
